# parse-rs

./: Cargo.toml
.github/workflows/: rust.yml
derive_operator/: Cargo.toml
derive_operator/src/: lib.rs
src/: error.rs  lexer.rs  lib.rs  operator.rs  test_dep.rs  tokens.rs  utils.rs
tests/: invalid_assoc.rs  invalid_ident.rs  invalid_ident.stderr  macro_tests.rs  not_enum.rs  parse.rs  parser.rs  tests.rs
tests/macro_tests/: derive.rs  invalid_assoc.rs  invalid_assoc.stderr  invalid_attribute.rs  invalid_attribute.stderr  invalid_ident.rs  invalid_ident.stderr  left_right.rs  left_right.stderr  no_ident.rs  no_ident.stderr  not_enum.rs  not_enum.stderr
