[package]
name = "parser"
version = "0.1.0"
authors = ["starfish-bee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ['derive_operator']

[dependencies]
derive_operator = { path = './derive_operator', optional = true }