[package]
name = "parser"
version = "0.1.0"
authors = ["starfish-bee"]
edition = "2018"
autotests = false
publish = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[features]
derive = ['derive_operator']

[dependencies]
derive_operator = { path = './derive_operator', optional = true }

[dev-dependencies]
trybuild = { version = "1.0.39", features = ["diff"] }
