[package]
name = "parser"
version = "0.1.0"
authors = ["starfish-bee"]
edition = "2018"
autotests = false
publish = false

[[test]]
name = "parser_tests"
path = "tests/parser_tests.rs"

[[test]]
name = "macro_tests"
path = "tests/macro_tests.rs"

[features]
derive = ['derive_operator']

[dependencies]
derive_operator = { path = './derive_operator', optional = true }

[dev-dependencies]
trybuild = { version = "1.0.39", features = ["diff"] }